fix: scroll overflowing pane tabs

--- a/desktop/src/renderer/index.css
+++ b/desktop/src/renderer/index.css
@@ -131,3 +131,14 @@
     @apply h-full overflow-hidden;
   }
 }
+
+@layer utilities {
+  .scrollbar-none {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+}
